--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "craco-less": "^1.18.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.1",
     "typescript": "^4.1.2",
+    "utils": "../utils",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
